# preprocess

./: .gitignore  pyproject.toml
src/preprocess/: ScienceQA.py  clevr.py  gqa.py  gqa_answer.py  pope.py  sharegpt.py  textvqa.py
