[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[project]
name = "preprocess"
version = "0.1.0"
description = "The missing data preprocessing library for LLM/VLM SFT/RL."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "datasets[vision]<4.8",
    "jsonargparse>4.45.0,<4.48",
    "ipykernel",
]
